# ioet_solution

./: README.md  pyproject.toml  schedule.txt  schedule1.txt
ioet_solution/: code.py  schedule.txt  schedule1.txt
tests/: test_ioet_solution.py
