[tool.poetry]
name = "IOET_solution"
version = "0.1.0"
description = ""
authors = ["JennyCGT <jenniferguayta@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
main = 'ioet_solution.code:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
